<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User_Signup">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinePointV10"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.08" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinePointV20"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.207" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinePointV25"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinePointV37"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".37" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinePointV50"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.46" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinePointV62"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinePointV75"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinePointV80"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.80" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinePointV90"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.12" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.18" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.27" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.29" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH39"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.37" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH44"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.39" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.46" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH51"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.48" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH55"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH58"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.64" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH57"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.57" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH63"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.64" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH65"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.66" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH75"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.73" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH78"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.78" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH83"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.83" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH85"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH88"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.88" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH91"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.91" />

    <EditText
        android:id="@+id/firstname"
        android:layout_width="154dp"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/first_name"
        android:textColorHint="@color/Black"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH17"
        app:layout_constraintEnd_toStartOf="@+id/guidelinePointV50"
        app:layout_constraintStart_toStartOf="@+id/guidelinePointV10"
        app:layout_constraintTop_toTopOf="@+id/guidelineH12" />

    <EditText
        android:id="@+id/lastname"
        android:layout_width="182dp"
        android:layout_height="44dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/last_name"
        android:textColorHint="@color/Black"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH17"
        app:layout_constraintEnd_toStartOf="@+id/guidelinePointV90"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guidelinePointV62"
        app:layout_constraintTop_toTopOf="@+id/guidelineH12" />

    <EditText
        android:id="@+id/email_address"
        android:layout_width="359dp"
        android:layout_height="51dp"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/Black"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH25"
        app:layout_constraintEnd_toStartOf="@+id/guidelinePointV90"
        app:layout_constraintStart_toStartOf="@+id/guidelinePointV10"
        app:layout_constraintTop_toTopOf="@+id/guidelineH20" />

    <EditText
        android:id="@+id/password"
        android:layout_width="353dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:textColorHint="@color/Black"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH39"
        app:layout_constraintEnd_toStartOf="@+id/guidelinePointV90"
        app:layout_constraintStart_toStartOf="@+id/guidelinePointV10"
        app:layout_constraintTop_toTopOf="@+id/guidelineH32" />

    <EditText
        android:id="@+id/em_contact1"
        android:layout_width="357dp"
        android:layout_height="47dp"
        android:ems="10"
        android:hint="@string/emergency_contact1"
        android:inputType="phone"
        android:textColorHint="@color/Black"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH45"
        app:layout_constraintEnd_toStartOf="@+id/guidelinePointV90"
        app:layout_constraintStart_toStartOf="@+id/guidelinePointV10"
        app:layout_constraintTop_toTopOf="@+id/guidelineH44" />
    <EditText
        android:id="@+id/em_contact2"
        android:layout_width="357dp"
        android:layout_height="47dp"
        android:ems="10"
        android:hint="@string/emergency_contact2"
        android:inputType="phone"
        android:textColorHint="@color/Black"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH55"
        app:layout_constraintEnd_toStartOf="@+id/guidelinePointV90"
        app:layout_constraintStart_toStartOf="@+id/guidelinePointV10"
        app:layout_constraintTop_toTopOf="@+id/guidelineH51" />

    <EditText
        android:id="@+id/user_dob"
        android:layout_width="354dp"
        android:layout_height="47dp"
        android:ems="10"
        android:inputType="date"
        android:hint="@string/date_of_birth"
        android:textColorHint="@color/Black"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH58"
        app:layout_constraintEnd_toStartOf="@+id/guidelinePointV90"
        app:layout_constraintStart_toStartOf="@+id/guidelinePointV10"
        app:layout_constraintTop_toTopOf="@+id/guidelineH57" />

    <EditText
        android:id="@+id/user_address"
        android:layout_width="356dp"
        android:layout_height="47dp"
        android:ems="10"
        android:inputType="textPostalAddress"
        android:hint="@string/user_address"
        android:textColorHint="@color/Black"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH75"
        app:layout_constraintEnd_toStartOf="@+id/guidelinePointV90"
        app:layout_constraintStart_toStartOf="@+id/guidelinePointV10"
        app:layout_constraintTop_toTopOf="@+id/guidelineH65" />

    <Button
        android:id="@+id/submit_user"
        android:layout_width="127dp"
        android:layout_height="47dp"
        android:background="@drawable/bg_theme_round_layer_shadow"
        android:enabled="true"
        android:onClick="allButtonClickHandler"
        android:text="@string/Submit"
        android:textColor="@color/White"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH85"
        app:layout_constraintEnd_toStartOf="@+id/guidelinePointV75"
        app:layout_constraintStart_toStartOf="@+id/guidelinePointV25"
        app:layout_constraintTop_toTopOf="@+id/guidelineH78" />

</androidx.constraintlayout.widget.ConstraintLayout>